--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # the authors 
 
 Mouna elyaacoubi <mounaelyaacoubi15@gmail.com>
-Adnane mifath  <@gmail.com>
+Adnane miftah  <adnane.miftah26@gmail.com>
