--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# the authors 
+# this file is for demonstarting the colabrators name
 
-Mouna elyaacoubi <mounaelyaacoubi15@gmail.com>
-Adnane miftah  <adnane.miftah26@gmail.com>
+mouna elyaacoubi	<mounaelyaacoubi15@gmail.com>
+adnane miftah 		<adnane.miftah26@gmail.com>
